# omnicopter_ros

./: CMakeLists.txt  README.md  package.xml  setup.sh
attitude_controller/: README.md
config/: RTIMULib.ini
control_allocation/: README.md
include/omnicopter_ros/: I2C.h  I2C.h.gch  PCA9685.h
launch/: dry_test.launch  motor_test.launch  omnicopter.launch  rtimulib_ros.launch
msg/: AttSp.msg  ControlMode.msg  MotorCommand.msg  PosSp.msg  RCInput.msg
omnicopter_msgs/: README.md
pca9685_i2c_driver/: README.md
rc_i2c_driver/: README.md
src/: I2C.cpp  PCA9685.cpp  attitude_controller.cpp  commander.cpp  control_allocation.cpp  i2c.cpp  main.cpp  motor_i2c_driver.cpp  motor_tester.cpp  position_controller.cpp  print_euler.cpp  pwm_i2c_driver.cpp  pwm_i2c_driver.h  rc_i2c_driver.cpp  rtimulib_ros.cpp  sonar_driver.cpp
