<?xml version="1.0"?>
<package>
	<name>omnicopter_ros</name>
 	<version>0.0.0</version>
 	<description>Package for flying an omnicopter using ROS on Raspberry Pi</description>

 	<maintainer email="martin.lysvand.sollie@gmail.com">Martin Lysvand Sollie</maintainer>

 	<license>TODO</license>

 	<buildtool_depend>catkin</buildtool_depend>
  	<build_depend>std_msgs</build_depend>
  	<build_depend>message_generation</build_depend>
  	<run_depend>std_msgs</run_depend>
  	<run_depend>sensor_msgs</run_depend>
  	<run_depend>geometry_msgs</run_depend>
  	<run_depend>message_runtime</run_depend>

 </package>